err/elasticache-pyclient-with-stats.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/elasticache_pyclient'...
Compiling './lib/python3.5/site-packages/elasticache_pyclient/__init__.py'...
***   File "./lib/python3.5/site-packages/elasticache_pyclient/__init__.py", line 15
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elasticache_pyclient/memcache_client.py'...
***   File "./lib/python3.5/site-packages/elasticache_pyclient/memcache_client.py", line 122
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/elasticache_pyclient/repeat_timer.py'...
***   File "./lib/python3.5/site-packages/elasticache_pyclient/repeat_timer.py", line 24
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/elasticache_pyclient_with_stats-2.0.egg-info'...
Listing './lib/python3.5/site-packages/hash_ring'...
Compiling './lib/python3.5/site-packages/hash_ring/__init__.py'...
***   File "./lib/python3.5/site-packages/hash_ring/__init__.py", line 5
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hash_ring-1.3.1.egg-info'...
Compiling './lib/python3.5/site-packages/memcached_stats.py'...
***   File "./lib/python3.5/site-packages/memcached_stats.py", line 6
    _key_regex = re.compile(ur'ITEM (.*) \[(.*); (.*)\]')
                                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_memcached-1.59.dist-info'...
Listing './lib/python3.5/site-packages/python_memcached_stats-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
